CoNLL parser with multiple relations

--- a/main.ipynb
+++ b/main.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,9 +107,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dev relations 652\n",
+      "dev source argumentative units 326\n",
+      "dev target argumentative units 144\n",
+      "test relations 1618\n",
+      "test source argumentative units 809\n",
+      "test target argumentative units 365\n",
+      "train relations 5392\n",
+      "train source argumentative units 2696\n",
+      "train target argumentative units 1198\n",
+      "Vocab size 8958\n",
+      "Relation tags ['supports', 'attacks', 'supports_Inverse', 'attacks_Inverse']\n",
+      "Proposition tags ['Claim', 'MajorClaim', 'Premise']\n",
+      "max_size_prop 70\n",
+      "max_amount_doc 20\n",
+      "[('supports', 'Premise', 'Claim'), ('', 'Premise', 'Premise'), ('supports', 'Premise', 'Premise')]\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "from link_prediction.tf_link_predictor import TensorflowLinkPredictor as LinkPredictor\n",
     "\n",
@@ -118,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,21 +152,21 @@
     "#     destination_dir=SEGMENTER,\n",
     "# )\n",
     "\n",
-    "# perform_link_prediction_pipeline(\n",
-    "#     link_predictor=link_predictor,\n",
-    "#     source_dir=SEGMENTER,\n",
-    "#     destination_dir=LINK_PREDICTION,\n",
-    "#     source_language=TARGET_LANGUAGE\n",
-    "# )\n",
-    "\n",
-    "perform_full_inference_pipeline(\n",
-    "    segmenter=segmenter,\n",
+    "perform_link_prediction_pipeline(\n",
     "    link_predictor=link_predictor,\n",
-    "    source_dir=TO_PROCESS,\n",
-    "    segmenter_destination_dir=SEGMENTER,\n",
+    "    source_dir=SEGMENTER,\n",
     "    destination_dir=LINK_PREDICTION,\n",
     "    source_language=TARGET_LANGUAGE\n",
-    ")"
+    ")\n",
+    "\n",
+    "# perform_full_inference_pipeline(\n",
+    "#     segmenter=segmenter,\n",
+    "#     link_predictor=link_predictor,\n",
+    "#     source_dir=TO_PROCESS,\n",
+    "#     segmenter_destination_dir=SEGMENTER,\n",
+    "#     destination_dir=LINK_PREDICTION,\n",
+    "#     source_language=TARGET_LANGUAGE\n",
+    "# )"
    ]
   },
   {
@@ -155,11 +178,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "from corpus_parser.brat_parser import BratParser\n",
     "from corpus_parser.conll_parser import ConllParser\n",
     "\n",
@@ -167,6 +189,13 @@
     "\n",
     "BratParser().export_from_dataframes(BRAT, dataframes_dict)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
