--- a/main.ipynb
+++ b/main.ipynb
@@ -19,6 +19,7 @@
     "from pathlib import Path\n",
     "\n",
     "INFO_TAG = \"persuasive_essays_paragraph\"\n",
+    "PROCESS_TAG = \"granma_letters\"\n",
     "BASE_DATA = Path(\"data\")\n",
     "\n",
     "SOURCE_LANGUAGE = \"english\"\n",
@@ -32,12 +33,12 @@
     "PROJECTION = BASE_DATA / 'projection' / INFO_TAG\n",
     "\n",
     "# Link Prediction\n",
-    "TO_PROCESS = BASE_DATA / \"to_process\" / INFO_TAG\n",
-    "SEGMENTER = BASE_DATA / \"segmenter_processed\" / INFO_TAG\n",
-    "LINK_PREDICTION = BASE_DATA / 'link_prediction_processed' / INFO_TAG\n",
+    "TO_PROCESS = BASE_DATA / \"to_process\" / PROCESS_TAG\n",
+    "SEGMENTER = BASE_DATA / \"segmenter_processed\" / INFO_TAG / PROCESS_TAG\n",
+    "LINK_PREDICTION = BASE_DATA / 'link_prediction_processed' / INFO_TAG / PROCESS_TAG\n",
     "\n",
     "# Export to Brat\n",
-    "BRAT = Path(\"brat\", \"data\", INFO_TAG)\n"
+    "BRAT = Path(\"brat\", \"data\", PROCESS_TAG)\n"
    ]
   },
   {
@@ -94,11 +95,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tag_amount 11\n",
+      "char_amount 89\n",
+      "word_amount 9007\n",
+      "max_word_size 19\n",
+      "max_seq_size 579\n",
+      "\n",
+      "word_to_index\n",
+      "Length: 9009\n",
+      "First 20: [('', 0), ('[UNK]', 1), (',', 2), ('de', 3), ('.', 4), ('la', 5), ('que', 6), ('los', 7), ('en', 8), ('y', 9), ('a', 10), ('el', 11), ('las', 12), ('para', 13), ('un', 14), ('es', 15), ('una', 16), ('más', 17), ('no', 18), ('se', 19)]\n",
+      "\n",
+      "tag_to_index\n",
+      "Length: 13\n",
+      "First 20: [('', 0), ('[UNK]', 1), ('I-Premise', 2), ('O', 3), ('I-Claim', 4), ('I-MajorClaim', 5), ('E-Premise', 6), ('B-Premise', 7), ('E-Claim', 8), ('B-Claim', 9), ('E-MajorClaim', 10), ('B-MajorClaim', 11), ('S-MajorClaim', 12)]\n",
+      "\n",
+      "char_to_index\n",
+      "Length: 91\n",
+      "First 20: [('', 0), ('[UNK]', 1), (' ', 2), ('e', 3), ('a', 4), ('s', 5), ('o', 6), ('n', 7), ('r', 8), ('i', 9), ('d', 10), ('l', 11), ('t', 12), ('u', 13), ('c', 14), ('m', 15), ('p', 16), ('b', 17), (',', 18), ('g', 19)]\n",
+      "tf.Tensor(\n",
+      "[[b'I-Premise' b'I-Premise' b'O' b'O' b'O' b'O' b'O' b'O' b'O' b'O' b'O'\n",
+      "  b'O' b'O' b'O' b'O' b'O' b'O' b'O' b'O' b'O' b'O' b'B-MajorClaim'\n",
+      "  b'I-MajorClaim' b'I-MajorClaim' b'I-MajorClaim' b'I-MajorClaim'\n",
+      "  b'I-MajorClaim' b'I-MajorClaim' b'I-MajorClaim' b'E-MajorClaim' b'O'\n",
+      "  b'O' b'O' b'O' b'O' b'O' b'O' b'O' b'O' b'O' b'B-Claim' b'I-Claim'\n",
+      "  b'I-Claim' b'I-Claim' b'I-Claim' b'I-Claim' b'I-Claim' b'I-Claim'\n",
+      "  b'I-Claim' b'I-Claim' b'I-Claim' b'I-Claim' b'I-Premise' b'I-Premise'\n",
+      "  b'I-Premise' b'I-Premise' b'I-Premise' b'I-Premise' b'I-Premise'\n",
+      "  b'I-Premise' b'I-Premise' b'I-Premise' b'I-Premise' b'I-Premise'\n",
+      "  b'I-Premise' b'E-Premise' b'O' b'B-Premise' b'I-Premise' b'I-Premise'\n",
+      "  b'I-Premise' b'I-Premise' b'I-Premise' b'I-Premise' b'I-Premise'\n",
+      "  b'I-Premise' b'I-Premise' b'I-Premise' b'I-Premise' b'I-Premise'\n",
+      "  b'I-Premise' b'I-Premise' b'E-Premise' b'O' b'B-Premise' b'I-Premise'\n",
+      "  b'I-Premise' b'I-Premise' b'I-Premise' b'I-Premise' b'I-Premise'\n",
+      "  b'I-Premise' b'I-Premise' b'I-Premise' b'I-Premise' b'I-Premise'\n",
+      "  b'I-Premise' b'I-Premise' b'I-Premise' b'I-Premise' b'I-Premise'\n",
+      "  b'I-Premise' b'I-Premise' b'I-Premise' b'I-Premise' b'I-Premise'\n",
+      "  b'I-Premise' b'I-Premise' b'I-Premise' b'I-Premise' b'I-Premise'\n",
+      "  b'I-Premise' b'E-Premise' b'O' b'B-Premise' b'I-Premise' b'I-Premise'\n",
+      "  b'I-Premise' b'I-Premise' b'I-Premise' b'I-Premise' b'I-Premise'\n",
+      "  b'I-Premise' b'I-Premise' b'I-Premise' b'I-Premise' b'I-Premise'\n",
+      "  b'I-Premise' b'I-Premise' b'I-Premise' b'I-Premise' b'I-Premise'\n",
+      "  b'I-Premise' b'I-Premise' b'I-Premise' b'E-Premise' b'O' b'B-Premise'\n",
+      "  b'I-Premise' b'I-Premise' b'I-Premise' b'I-Premise' b'I-Premise'\n",
+      "  b'I-Premise' b'I-Premise' b'I-Premise' b'I-Premise' b'I-Premise'\n",
+      "  b'I-Premise' b'I-Premise' b'E-Premise' b'O' b'B-Premise' b'I-Premise'\n",
+      "  b'I-Premise' b'I-Premise' b'I-Premise' b'I-Premise' b'I-Premise'\n",
+      "  b'I-Premise' b'I-Premise' b'I-Premise' b'I-Premise' b'I-Premise'\n",
+      "  b'I-Premise' b'I-Premise' b'I-Premise' b'I-Premise' b'I-Premise'\n",
+      "  b'I-Premise' b'I-Premise' b'E-Premise' b'O' b'O' b'O' b'B-Premise'\n",
+      "  b'I-Premise' b'I-Premise' b'I-Premise' b'I-Premise' b'I-Premise'\n",
+      "  b'I-Premise' b'I-Premise' b'I-Premise' b'I-Premise' b'I-Premise'\n",
+      "  b'I-Premise' b'I-Premise' b'I-Premise' b'I-Premise' b'I-Premise'\n",
+      "  b'I-Premise' b'I-Premise' b'I-Premise' b'I-Premise' b'I-Premise'\n",
+      "  b'I-Premise' b'I-Premise' b'I-Premise' b'I-Premise' b'I-Premise'\n",
+      "  b'I-Premise' b'I-Premise' b'I-Premise' b'I-Premise' b'I-Premise'\n",
+      "  b'I-Premise' b'I-Premise' b'I-Premise' b'I-Premise' b'I-Premise'\n",
+      "  b'E-Premise' b'O' b'O' b'O' b'I-Premise' b'I-Premise' b'I-Claim'\n",
+      "  b'I-Claim' b'I-Claim' b'I-Claim' b'I-Claim' b'I-Claim' b'E-Claim' b'O'\n",
+      "  b'O' b'O' b'O' b'O' b'I-Premise' b'I-Premise' b'I-Premise' b'E-Premise'\n",
+      "  b'O' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b''\n",
+      "  b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b''\n",
+      "  b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b''\n",
+      "  b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b''\n",
+      "  b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b''\n",
+      "  b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b''\n",
+      "  b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b''\n",
+      "  b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b''\n",
+      "  b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b''\n",
+      "  b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b''\n",
+      "  b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b''\n",
+      "  b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b''\n",
+      "  b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b''\n",
+      "  b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b''\n",
+      "  b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b''\n",
+      "  b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b''\n",
+      "  b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b''\n",
+      "  b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b''\n",
+      "  b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b'' b''\n",
+      "  b'' b'' b'' b'' b'']], shape=(1, 579), dtype=string)\n",
+      "[['B-Premise', 'E-Premise', 'O', 'O', 'O', 'O', 'O', 'O', 'O', 'O', 'O', 'O', 'O', 'O', 'O', 'O', 'O', 'O', 'O', 'O', 'O', 'B-MajorClaim', 'I-MajorClaim', 'I-MajorClaim', 'I-MajorClaim', 'I-MajorClaim', 'I-MajorClaim', 'I-MajorClaim', 'I-MajorClaim', 'E-MajorClaim', 'O', 'O', 'O', 'O', 'O', 'O', 'O', 'O', 'O', 'O', 'B-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'E-Premise', 'O', 'B-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'E-Premise', 'O', 'B-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'E-Premise', 'O', 'B-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'E-Premise', 'O', 'B-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'E-Premise', 'O', 'B-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'E-Premise', 'O', 'O', 'O', 'B-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'I-Premise', 'E-Premise', 'O', 'O', 'O', 'B-Claim', 'I-Claim', 'I-Claim', 'I-Claim', 'I-Claim', 'I-Claim', 'I-Claim', 'I-Claim', 'E-Claim', 'O', 'O', 'O', 'O', 'O', 'B-Premise', 'I-Premise', 'I-Premise', 'E-Premise', 'O']]\n"
+     ]
+    }
+   ],
    "source": [
     "from segmenter.tf_segmenter import TensorflowArgumentSegmenter as Segmenter\n",
     "\n",
@@ -124,11 +211,11 @@
       "train source argumentative units 2696\n",
       "train target argumentative units 1198\n",
       "Vocab size 8958\n",
-      "Relation tags ['supports', 'attacks', 'supports_Inverse', 'attacks_Inverse']\n",
-      "Proposition tags ['Claim', 'MajorClaim', 'Premise']\n",
+      "Relation tags ['supports_Inverse', 'attacks', 'attacks_Inverse', 'supports']\n",
+      "Proposition tags ['Claim', 'Premise', 'MajorClaim']\n",
       "max_size_prop 70\n",
       "max_amount_doc 20\n",
-      "[('supports', 'Premise', 'Claim'), ('', 'Premise', 'Premise'), ('supports', 'Premise', 'Premise')]\n",
+      "[('supports', 'Premise', 'Premise'), ('', 'Premise', 'Premise'), ('supports_Inverse', 'Premise', 'Premise')]\n",
       "3\n"
      ]
     }
@@ -141,8 +228,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -150,6 +239,7 @@
     "#     segmenter=segmenter,\n",
     "#     source_dir=TO_PROCESS,\n",
     "#     destination_dir=SEGMENTER,\n",
+    "#     language=TARGET_LANGUAGE,\n",
     "# )\n",
     "\n",
     "perform_link_prediction_pipeline(\n",
@@ -178,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
