--- a/link_prediction/models/link_prediction.ipynb
+++ b/link_prediction/models/link_prediction.ipynb
@@ -1876,7 +1876,9 @@
    ],
    "source": [
     "def plot_history(params: dict):\n",
-    "    history = params['history_0']\n",
+    "    ensemble_amount = params['ensemble_amount']\n",
+    "    images_path = Path(params['export_path'])\n",
+    "\n",
     "    relation_labels = [x if x else \"None\" for x in params['relation_tag_vectorizer'].get_vocabulary()]\n",
     "    proposition_labels = [x if x else \"None\" for x in params['proposition_tag_vectorizer'].get_vocabulary()]\n",
     "        \n",
@@ -1889,6 +1891,7 @@
     "        plt.xlabel(x_label)\n",
     "        plt.ylabel(y_label)\n",
     "        plt.legend()\n",
+    "        plt.savefig(images_path / f\"{title}.png\")\n",
     "        plt.show()\n",
     "        \n",
     "    def plot_categorical_list(values, labels, bar_plot=False):\n",
@@ -1900,19 +1903,56 @@
     "            for label, label_values in zip(labels, values):\n",
     "                X = [i for i in range(len(label_values))]\n",
     "                plt.plot(X, label_values, label=label)\n",
+    "\n",
+    "    # Joint Metrics for models    \n",
+    "\n",
+    "    histories = [params[f\"history_{i}\"].items() for i in range(ensemble_amount)]\n",
+    "    for histories_items in zip(*histories):\n",
+    "        for key_value in histories_items:\n",
+    "            for i, (key, value) in enumerate(key_value):\n",
+    "                # i is the model ensemble number\n",
+    "                if f\"_{i}\" not in key:\n",
+    "                    key += f\"_{i}\"\n",
+    "                value = np.array(value)\n",
+    "                if len(value.shape) == 1: # List values\n",
+    "                    plot_list(value, key)\n",
+    "                else: # Categorical values\n",
+    "                    labels = relation_labels if 'relation' in key else proposition_labels\n",
+    "                    plot_categorical_list(value, labels, bar_plot=True)\n",
+    "                    show_plot(key + \" bar\", x_label='categories', y_label=\"values\")\n",
+    "                    plot_categorical_list(value, labels, bar_plot=False)\n",
+    "            if len(value.shape) == 1:\n",
+    "                show_plot(key, y_label=\"values\")\n",
+    "            else:\n",
+    "                show_plot(key, y_label=\"values\")\n",
     "    \n",
-    "    for key, value in history.items():\n",
-    "        value = np.array(value)\n",
-    "        if len(value.shape) == 1: # List values\n",
-    "            plot_list(value, key)\n",
-    "            show_plot(key, y_label=\"values\")\n",
-    "        else: # Categorical values\n",
-    "            labels = relation_labels if 'relation' in key else proposition_labels\n",
-    "            plot_categorical_list(value, labels, bar_plot=True)\n",
-    "            show_plot(key + \" bar\", x_label='categories', y_label=\"values\")\n",
-    "            plot_categorical_list(value, labels, bar_plot=False)\n",
-    "            show_plot(key, y_label=\"values\")\n",
-    "        \n",
+    "    # Joint Validation and Training Metrics from single model\n",
+    "\n",
+    "    def plot_with_loss(key, history):\n",
+    "        val_key = \"val_\" + key\n",
+    "        train = history[key]\n",
+    "        val = history[val_key]\n",
+    "        plot_list(train, key)\n",
+    "        plot_list(val, val_key)\n",
+    "        show_plot(key + \"_\" + val_key, y_label=\"values\")\n",
+    "\n",
+    "    histories = [(i, params[f\"history_{i}\"]) for i in range(ensemble_amount)]\n",
+    "    metrics = [\n",
+    "        \"loss\",\n",
+    "        \"relation_{i}_loss\",\n",
+    "        \"source_{i}_loss\",\n",
+    "        \"target_{i}_loss\",\n",
+    "        \"relation_{i}_acc\",\n",
+    "        \"source_{i}_acc\",\n",
+    "        \"target_{i}_acc\",\n",
+    "    ]\n",
+    "    for i, history in histories:\n",
+    "        for metric in metrics:\n",
+    "            metric = metric.format_map({\"i\":i})\n",
+    "            plot_with_loss(metric, history)\n",
+    "\n",
+    "\n",
+    "\n",
     "plot_history(params)"
    ]
   },
@@ -1952,26 +1992,6 @@
     "    def __decode_outputs(self, outputs):\n",
     "        propositions = self.proposition_tag_vectorizer.get_vocabulary()\n",
     "        relations = self.relation_tag_vectorizer.get_vocabulary()\n",
-    "        \n",
-    "#         # Flatting results\n",
-    "#         results = []\n",
-    "#         for models_output in outputs:\n",
-    "#             relation = []\n",
-    "#             source = []\n",
-    "#             target = []\n",
-    "#             for i,input_models_output in enumerate(zip(*models_output)):\n",
-    "#                 print(input_models_output)\n",
-    "#                 if i == 0:\n",
-    "#                     current = relation\n",
-    "#                 elif i == 1:\n",
-    "#                     current = source\n",
-    "#                 elif i == 2:\n",
-    "#                     current = target\n",
-    "#                 current.append(list(input_models_output))\n",
-    "                \n",
-    "# #                 for relation_output, source_output, target_output in zip(relation_outputs, source_outputs, target_outputs):\n",
-    "# #                     result.append((relation_output, source_output, target_output))\n",
-    "#             results.append(list(zip(relation, source, target)))\n",
     "        \n",
     "        final_result = []\n",
     "        relation_eye = tf.eye(len(relations))\n",
@@ -2435,9 +2455,11 @@
     "    target_tag_ds = tf.data.Dataset.from_tensor_slices(data_dataframe['target_prop_type'])\n",
     "    relation_tag_ds = tf.data.Dataset.from_tensor_slices(data_dataframe['relation_type'])\n",
     "\n",
-    "    batch_num = 1\n",
+    "    batch_num = 0\n",
+    "    log_period = 10\n",
     "    for sources, targets, distances, source_tags, target_tags, relation_tags in tf.data.Dataset.zip((source_ds, target_ds, distance_ds, source_tag_ds, target_tag_ds, relation_tag_ds)).batch(32):\n",
-    "        print(\"batch:\", batch_num)\n",
+    "        if batch_num % log_period == 0:\n",
+    "            print(\"batch:\", batch_num)\n",
     "        batch_num += 1\n",
     "        \n",
     "        inference = model(sources, targets, distances)\n",
@@ -2564,91 +2586,9 @@
    "source": [
     "\n",
     "def show_statistic(params: dict):\n",
-    "    statistic = params['statistic']\n",
-    "#     statistic = {\n",
-    "#         'source_prop_text': [],\n",
-    "#         'target_prop_text': [],\n",
-    "#         'source_prop_type': [],\n",
-    "#         'target_prop_type': [],\n",
-    "#         'relation_type': [],\n",
-    "#         'infered_source_prop_type': [],\n",
-    "#         'infered_target_prop_type': [],\n",
-    "#         'infered_relation_type': [], \n",
-    "#         'distance': [],\n",
-    "#     }\n",
-    "    true_positive_relation = statistic[statistic['relation_type'] == statistic['infered_relation_type']]\n",
-    "    true_positive_source = statistic[statistic['source_prop_type'] == statistic['infered_source_prop_type']]\n",
-    "    true_positive_target = statistic[statistic['target_prop_type'] == statistic['infered_target_prop_type']]\n",
-    "    \n",
-    "#     only_inverse_relations = statistic[statistic['infered_relation_type'].str.endswith(\"_Inverse\")]\n",
-    "#     only_straight_relations = statistic[~statistic['infered_relation_type'].str.endswith(\"_Inverse\")]\n",
+    "    statistic_path = Path(params['export_path'], \"statistic.json\")\n",
+    "    model_name = params['model_name']\n",
     "\n",
-    "#     print(len(only_inverse_relations))\n",
-    "#     print(len(only_straight_relations))\n",
-    "    \n",
-    "#     to_add_straight = {\n",
-    "#         'source_prop_text': [],\n",
-    "#         'target_prop_text': [],\n",
-    "#         'source_prop_type': [],\n",
-    "#         'target_prop_type': [],\n",
-    "#         'relation_type': [],\n",
-    "#         'infered_source_prop_type': [],\n",
-    "#         'infered_target_prop_type': [],\n",
-    "#         'infered_relation_type': [], \n",
-    "#         'distance': [],\n",
-    "#     }\n",
-    "    \n",
-    "#     def invert_relation_name(name):\n",
-    "#         if name.endswith(\"_Inverse\"):\n",
-    "#             return name[:len(\"_Inverse\")]\n",
-    "#         else:\n",
-    "#             return name + \"_Inverse\"\n",
-    "#     # Convert straight relations to direct relations\n",
-    "#     for i, row in only_inverse_relations.iterrows():\n",
-    "#         straight_df = only_straight_relations[\n",
-    "#             (only_straight_relations['source_prop_text'] == row['target_prop_text']) \n",
-    "#           & (only_straight_relations['target_prop_text'] == row['source_prop_text'])]\n",
-    "#         if len(straight_df) == 0:\n",
-    "#             to_add_straight['source_prop_text'].append(row['target_prop_text'])\n",
-    "#             to_add_straight['target_prop_text'].append(row['source_prop_text'])\n",
-    "#             to_add_straight['source_prop_type'].append(row['target_prop_type'])\n",
-    "#             to_add_straight['target_prop_type'].append(row['source_prop_type'])\n",
-    "#             to_add_straight['relation_type'].append(invert_relation_name(row['relation_type']))\n",
-    "#             to_add_straight['infered_source_prop_type'].append(row['infered_target_prop_type'])\n",
-    "#             to_add_straight['infered_target_prop_type'].append(row['infered_source_prop_type'])\n",
-    "#             to_add_straight['infered_relation_type'].append(invert_relation_name(row['infered_relation_type'])) \n",
-    "#             to_add_straight['distance'].append(-row['distance'])\n",
-    "#         if len(straight_df) == 1:\n",
-    "#             straight_row = straight_df.iloc[0]\n",
-    "#             if \n",
-    "#         else:\n",
-    "#             pass #print(\"WARNING: Some propositions have more than one Inverse relation\")\n",
-    "    \n",
-    "#     print(f\"Added {len(to_add_straight['distance'])} elements from inverse relations\")\n",
-    "#     only_straight_relations = pandas.concat([only_straight_relations, pandas.DataFrame(to_add_straight)], ignore_index=True)\n",
-    "    \n",
-    "    print(\"Accuracy:\")\n",
-    "    relation_accuracy = len(true_positive_relation) / len(statistic)\n",
-    "    print(\"Relation Accuracy:\", relation_accuracy)\n",
-    "    source_accuracy = len(true_positive_source) / len(statistic)\n",
-    "    print(\"Source Accuracy:\", source_accuracy)\n",
-    "    target_accuracy = len(true_positive_target) / len(statistic)\n",
-    "    print(\"Target Accuracy:\", target_accuracy)\n",
-    "    \n",
-    "    source_counter = Counter(statistic['source_prop_type'])\n",
-    "    target_counter = Counter(statistic['target_prop_type'])\n",
-    "    relation_counter = Counter(statistic['relation_type'])\n",
-    "    print(\"Source Counter:\", source_counter)\n",
-    "    print(\"Target Counter:\", target_counter)\n",
-    "    print(\"Relation Counter:\", relation_counter)\n",
-    "    \n",
-    "    infered_source_counter = Counter(statistic['infered_source_prop_type'])\n",
-    "    infered_target_counter = Counter(statistic['infered_target_prop_type'])\n",
-    "    infered_relation_counter = Counter(statistic['infered_relation_type'])\n",
-    "    print(\"Infered Source Counter:\", infered_source_counter)\n",
-    "    print(\"Infered Target Counter:\", infered_target_counter)\n",
-    "    print(\"Infered Relation Counter:\", infered_relation_counter)\n",
-    "    \n",
     "    def plot_confusion_matrix(true_y, pred_y, title, xticks_rotation=0):\n",
     "        ConfusionMatrixDisplay.from_predictions(true_y, pred_y, normalize=\"true\")\n",
     "        plt.xticks(rotation = xticks_rotation)\n",
@@ -2658,19 +2598,46 @@
     "    def sk_f1_report(title, y_true, y_infered):\n",
     "        print(title)\n",
     "        print(classification_report(y_true, y_infered, zero_division=0))\n",
+    "        return classification_report(y_true, y_infered, zero_division=0, output_dict=True)\n",
     "    \n",
-    "    def full_report(statistic):\n",
+    "    def full_report(title, statistic):\n",
     "    \n",
-    "        sk_f1_report(\"Relation\", statistic['relation_type'], statistic['infered_relation_type'])\n",
-    "        sk_f1_report(\"Source\", statistic['source_prop_type'], statistic['infered_source_prop_type'])\n",
-    "        sk_f1_report(\"Target\", statistic['target_prop_type'], statistic['infered_target_prop_type'])\n",
+    "        print(title)\n",
+    "        print()\n",
+    "\n",
+    "        relation = sk_f1_report(\"Relation\", statistic['relation_type'], statistic['infered_relation_type'])\n",
+    "        source = sk_f1_report(\"Source\", statistic['source_prop_type'], statistic['infered_source_prop_type'])\n",
+    "        target = sk_f1_report(\"Target\", statistic['target_prop_type'], statistic['infered_target_prop_type'])\n",
     "\n",
     "        plot_confusion_matrix(statistic['relation_type'], statistic['infered_relation_type'], \"Relation\", xticks_rotation=45)\n",
     "        plot_confusion_matrix(statistic['source_prop_type'], statistic['infered_source_prop_type'], \"Source\")\n",
     "        plot_confusion_matrix(statistic['target_prop_type'], statistic['infered_target_prop_type'], \"Target\")\n",
+    "\n",
+    "        return {\n",
+    "            \"relation\": relation,\n",
+    "            \"source\": source,\n",
+    "            \"target\": target\n",
+    "        }\n",
     "    \n",
-    "    \n",
-    "    full_report(statistic)\n",
+    "    statistic = params['statistic']\n",
+    "    all_relations = full_report(\"All relations\", statistic)\n",
+    "\n",
+    "    only_straight_relations = statistic[~statistic['relation_type'].str.endswith(\"_Inverse\")]\n",
+    "    only_straight_relations['infered_relation_type'] = only_straight_relations['infered_relation_type'].map(lambda x: \"\" if x.endswith(\"_Inverse\") else x)\n",
+    "    # If a relation r_Inverse is predicted, then it will count as an empty relation.\n",
+    "    inverse_no_count_relations = full_report(\"Only Forward relations with inverse disabled\", only_straight_relations)\n",
+    "\n",
+    "    only_straight_relations = statistic[~statistic['relation_type'].str.endswith(\"_Inverse\")]\n",
+    "    only_straight_relations['infered_relation_type'] = only_straight_relations['infered_relation_type'].map(lambda x: x.replace(\"_Inverse\", \"\") if x.endswith(\"_Inverse\") else x)\n",
+    "    # If a relation r_Inverse is predicted, then it will count as a r relation. \n",
+    "    bidirectional_relations = full_report(\"Only Forward relations connected somehow\", only_straight_relations)\n",
+    "\n",
+    "    with statistic_path.open(\"w\") as file:\n",
+    "        json.dump({\n",
+    "            \"all_relations\": all_relations,\n",
+    "            \"inverse_no_count_relations\": inverse_no_count_relations,\n",
+    "            \"bidirectional_relations\": bidirectional_relations\n",
+    "        }, file)\n",
     "    \n",
     "show_statistic(params)"
    ]
