--- a/segmenter/models/segmenter.ipynb
+++ b/segmenter/models/segmenter.ipynb
@@ -80,7 +80,7 @@
     "\n",
     "params = {\n",
     "    # POS Tagger\n",
-    "    \"pos_tagger\": \"nltk\", # Can be NLTK or Spacy\n",
+    "    \"pos_tagger\": \"nltk\", # Can be nltk or spacy\n",
     "    \n",
     "    \n",
     "    # POS Hyperparameters\n",
@@ -188,13 +188,8 @@
     "    json.dump(params, Path(params['model_path'], \"params.json\").open(\"w\"))\n",
     "\n",
     "# Non serializable switch\n",
-    "if params['pos_tagger'] in ['nltk', 'spacy']:\n",
-    "    params.update({\n",
-    "        # POS Tagger\n",
-    "        'pos_tagger': NLTKPOSTagger() if params['pos_tagger'] == \"nltk\" else (SpacyPOSTagger() if params['pos_tagger'] == \"spacy\" else None),\n",
-    "    })\n",
-    "else:\n",
-    "    raise Exception()"
+    "if params['pos_tagger'] not in ['nltk', 'spacy']:\n",
+    "    raise Exception(\"Invalid POS Tagguer\")"
    ]
   },
   {
@@ -821,6 +816,10 @@
     "    )\n",
     "    \n",
     "    # Embedding layer, convert an index vector into a embedding vector, by accessing embedding_matrix\n",
+    "    \n",
+    "    print(words_amount) # HEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEERE\n",
+    "    print(embedding_matrix.shape)\n",
+    "    \n",
     "    embedding_layer = layers.Embedding(\n",
     "        words_amount,\n",
     "        embedding_dim,\n",
@@ -1365,7 +1364,7 @@
     "    pos_vectorizer = params['pos_vectorizer']\n",
     "    pos_encoder = params['pos_encoder']\n",
     "    language = params['language']\n",
-    "    pos_tagger = params['pos_tagger']\n",
+    "    pos_tagger = NLTKPOSTagger() if params['pos_tagger'] == \"nltk\" else (SpacyPOSTagger() if params['pos_tagger'] == \"spacy\" else None)\n",
     "    \n",
     "    full_model = ExportModel(\n",
     "        model, \n",
@@ -1434,7 +1433,7 @@
     "    pos_vectorizer = params['pos_vectorizer']\n",
     "    pos_encoder = params['pos_encoder']\n",
     "    language = params['language']\n",
-    "    pos_tagger = params['pos_tagger']\n",
+    "    pos_tagger = NLTKPOSTagger() if params['pos_tagger'] == \"nltk\" else (SpacyPOSTagger() if params['pos_tagger'] == \"spacy\" else None)\n",
     "\n",
     "    full_model = ExportFixedTagsModel(\n",
     "        model, \n",
