Skip corpus creation

--- a/segmenter/models/segmenter.ipynb
+++ b/segmenter/models/segmenter.ipynb
@@ -3300,8 +3300,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train_pipeline(params: dict):\n",
-    "    create_segmenter_corpus(params)\n",
+    "def train_pipeline(params: dict, create_corpus: bool = True):\n",
+    "    if create_corpus:\n",
+    "        create_segmenter_corpus(params)\n",
     "    add_datasets(params)\n",
     "    add_embeddings(params)\n",
     "    create_model(params)\n",
