--- a/segmenter/models/segmenter.ipynb
+++ b/segmenter/models/segmenter.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -252,27 +252,27 @@
      "output_type": "stream",
      "text": [
       "pos_amount 12\n",
-      "tag_amount 18\n",
-      "char_amount 104\n",
-      "word_amount 7113\n",
-      "max_word_size 29\n",
-      "max_seq_size 553\n",
+      "tag_amount 10\n",
+      "char_amount 113\n",
+      "word_amount 9699\n",
+      "max_word_size 42\n",
+      "max_seq_size 580\n",
       "\n",
       "word_to_index\n",
-      "Length: 7115\n",
-      "First 20: [('', 0), ('[UNK]', 1), ('noun', 2), ('verb', 3), ('adp', 4), ('det', 5), ('.', 6), ('conj', 7), ('de', 8), ('adj', 9), ('pron', 10), ('adv', 11), ('que', 12), (',', 13), ('la', 14), ('el', 15), ('y', 16), ('a', 17), ('en', 18), ('los', 19)]\n",
+      "Length: 9701\n",
+      "First 20: [('', 0), ('[UNK]', 1), ('noun', 2), ('adp', 3), ('.', 4), ('det', 5), ('adj', 6), ('de', 7), ('verb', 8), ('num', 9), ('conj', 10), ('la', 11), (',', 12), ('adv', 13), (')', 14), ('(', 15), ('el', 16), ('y', 17), ('en', 18), ('x', 19)]\n",
       "\n",
       "tag_to_index\n",
-      "Length: 20\n",
-      "First 20: [('', 0), ('[UNK]', 1), ('I-value', 2), ('I-testimony', 3), ('I-policy', 4), ('I-fact', 5), ('E-value', 6), ('B-value', 7), ('E-testimony', 8), ('B-testimony', 9), ('O', 10), ('E-fact', 11), ('B-fact', 12), ('E-policy', 13), ('B-policy', 14), ('I-reference', 15), ('E-reference', 16), ('B-reference', 17), ('S-value', 18), ('S-testimony', 19)]\n",
+      "Length: 12\n",
+      "First 20: [('', 0), ('[UNK]', 1), ('O', 2), ('I-Premise', 3), ('I-Claim', 4), ('E-Premise', 5), ('B-Premise', 6), ('I-MajorClaim', 7), ('E-Claim', 8), ('B-Claim', 9), ('E-MajorClaim', 10), ('B-MajorClaim', 11)]\n",
       "\n",
       "char_to_index\n",
-      "Length: 106\n",
-      "First 20: [('', 0), ('[UNK]', 1), (' ', 2), ('N', 3), ('e', 4), ('a', 5), ('D', 6), ('o', 7), ('O', 8), ('E', 9), ('n', 10), ('s', 11), ('r', 12), ('d', 13), ('A', 14), ('i', 15), ('U', 16), ('R', 17), ('V', 18), ('P', 19)]\n",
+      "Length: 115\n",
+      "First 20: [('', 0), ('[UNK]', 1), (' ', 2), ('N', 3), ('e', 4), ('a', 5), ('D', 6), ('O', 7), ('U', 8), ('o', 9), ('i', 10), ('n', 11), ('A', 12), ('s', 13), ('r', 14), ('d', 15), ('t', 16), ('c', 17), ('l', 18), ('P', 19)]\n",
       "\n",
       "pos_to_index\n",
       "Length: 14\n",
-      "First 20: [('', 0), ('[UNK]', 1), ('NOUN', 2), ('VERB', 3), ('ADP', 4), ('DET', 5), ('.', 6), ('CONJ', 7), ('ADJ', 8), ('PRON', 9), ('ADV', 10), ('NUM', 11), ('X', 12), ('PRT', 13)]\n"
+      "First 20: [('', 0), ('[UNK]', 1), ('NOUN', 2), ('ADP', 3), ('.', 4), ('DET', 5), ('ADJ', 6), ('VERB', 7), ('NUM', 8), ('CONJ', 9), ('ADV', 10), ('X', 11), ('PRON', 12), ('PRT', 13)]\n"
      ]
     }
    ],
@@ -330,9 +330,9 @@
     "    \n",
     "    # Computing dataset information\n",
     "    \n",
-    "    params['tag_amount'] = get_length_dataset(tags_dataset)\n",
-    "    params['char_amount'] = get_length_dataset(chars_dataset)\n",
-    "    params['pos_amount'] = get_length_dataset(pos_dataset)\n",
+    "    params['tag_amount'] = len([x for x in Path(params['tags_path']).read_text().split(\"\\n\") if x])#get_length_dataset(tags_dataset)\n",
+    "    params['char_amount'] = len([x for x in Path(params['chars_path']).read_text().split(\"\\n\") if x])#get_length_dataset(chars_dataset)\n",
+    "    params['pos_amount'] = len([x for x in Path(params['pos_path']).read_text().split(\"\\n\") if x])#get_length_dataset(pos_dataset)\n",
     "    params['max_word_size'] = int(words_dataset.reduce(initial_state=0, reduce_func=lambda x,y: tf.maximum(x, tf.strings.length(y))))\n",
     "    max_seq_size = int(train_labels_dataset.reduce(initial_state=tf.constant([0]), reduce_func=lambda x,y: tf.maximum(x, tf.shape(tf.strings.split(y, sep=\" \"))))[0])\n",
     "    params['max_seq_size'] = min(max_seq_size, params['max_seq_size'])\n",
@@ -3385,12 +3385,21 @@
    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
   },
   "kernelspec": {
-   "display_name": "Python 3.6.9 64-bit",
+   "display_name": "Python 3",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": ""
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
